# PearlsFAD

./: PearlsOfFunctionalAlgorithmDesign.cabal  README
src/: MakingACentury.hs  MinFree.hs  Saddleback.hs  SelectionProblem.hs  Surpasser.hs
