name:                PearlsOfFunctionalAlgorithmDesign
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     MinFree, Surpasser
  build-depends:       base >=4.5 && <4.6,
                       lens == 3.9.*,
                       QuickCheck == 2.6.*,
                       array == 0.4.*
  default-language:    Haskell2010